<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".SignUpActivity2">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/login"
        android:layout_width="413dp"
        android:layout_height="280dp"
        android:background="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_rawRes="@raw/phone" />


    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="156dp"
        android:text="@string/your_phone"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/please_confirm_your_county_code_nand_enter_your_phone_number"
        android:textColor="@color/secondary_text"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@+id/inputMobile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <EditText
        android:id="@+id/inputMobile"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/phoneline_hint"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:paddingVertical="10dp"
        android:paddingStart="20dp"
        android:paddingBottom="30sp"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/toSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="35dp"
        android:gravity="center_vertical"
        android:text="@string/have_account"
        android:textColor="@color/primary_red"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/btnSignUp"
        app:layout_constraintEnd_toEndOf="@+id/btnSignUp"
        app:layout_constraintStart_toStartOf="@+id/btnSignUp"
        app:layout_constraintTop_toTopOf="@+id/btnSignUp" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="220dp"
        android:layout_height="65dp"
        android:layout_marginTop="155dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/btn_bg"
        android:fontFamily="@font/fredoka_medium"
        android:text="@string/verify_number"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputMobile" />

    <EditText
        android:layout_width="55dp"
        android:layout_height="65dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/edit_text_bg"
        android:gravity="center"
        android:hint="@string/country_code"
        android:imeOptions="actionNext"
        android:maxLength="0"
        android:maxLines="2"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/inputMobile"
        app:layout_constraintEnd_toStartOf="@+id/inputMobile"
        app:layout_constraintHorizontal_bias="0.96"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/inputMobile" />

</androidx.constraintlayout.widget.ConstraintLayout>